[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Pages/EditLeaderboard/EditLeaderboard.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Buttons/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Buttons/BackButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PageTitle/PageTitle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/TextEdit.tscn" type="PackedScene" id=6]
[ext_resource path="res://normal_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://SourceSansPro-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/question-mark-48.png" type="Texture" id=9]
[ext_resource path="res://images/unchecked-checkbox-48.png" type="Texture" id=10]
[ext_resource path="res://images/checked-checkbox-48.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.160784, 0.231373, 0.372549, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.313726, 0.501961, 0.556863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.313726, 0.501961, 0.556863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageTitle" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 1024.0
margin_bottom = 50.0
text = "Edit"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1044.0
margin_bottom = 51.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 31 )

[node name="Label" type="Label" parent="VBoxContainer/Control/VBoxContainer/Name"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "Name:"

[node name="TextEdit" parent="VBoxContainer/Control/VBoxContainer/Name" instance=ExtResource( 6 )]
margin_left = 154.0
margin_right = 404.0
margin_bottom = 32.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )

[node name="QuestionButton" parent="VBoxContainer/Control/VBoxContainer/Name" instance=ExtResource( 2 )]
margin_left = 408.0
margin_right = 440.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 1
icon = ExtResource( 9 )

[node name="Answer" type="Label" parent="VBoxContainer/Control/VBoxContainer/Name"]
visible = false
margin_left = 444.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "The Name of your Leaderboard. This field is editable"
autowrap = true

[node name="EncryptionKey" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 31 )

[node name="Label" type="Label" parent="VBoxContainer/Control/VBoxContainer/EncryptionKey"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "Encryption Key: "

[node name="TextEdit" parent="VBoxContainer/Control/VBoxContainer/EncryptionKey" instance=ExtResource( 6 )]
margin_left = 154.0
margin_right = 404.0
margin_bottom = 32.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )

[node name="QuestionButton" parent="VBoxContainer/Control/VBoxContainer/EncryptionKey" instance=ExtResource( 2 )]
margin_left = 408.0
margin_right = 440.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 1
icon = ExtResource( 9 )

[node name="Answer" type="Label" parent="VBoxContainer/Control/VBoxContainer/EncryptionKey"]
visible = false
margin_left = 444.0
margin_right = 1024.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "This 16 digit long key is used for the encryption of the highscore submission for this leaderboard. Change this key when a cheater has found it."
autowrap = true

[node name="LowBetter" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 31 )

[node name="Label" type="Label" parent="VBoxContainer/Control/VBoxContainer/LowBetter"]
margin_top = 7.0
margin_right = 180.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "The lower the better: "

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Control/VBoxContainer/LowBetter"]
modulate = Color( 0.313726, 0.501961, 0.556863, 1 )
margin_left = 184.0
margin_right = 224.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 10 )

[node name="QuestionButton" parent="VBoxContainer/Control/VBoxContainer/LowBetter" instance=ExtResource( 2 )]
margin_left = 228.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 1
icon = ExtResource( 9 )

[node name="Answer" type="Label" parent="VBoxContainer/Control/VBoxContainer/LowBetter"]
visible = false
margin_left = 444.0
margin_right = 1024.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "if on, the leaderboard will list lower scores first"
autowrap = true

[node name="PublicKey" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer"]
margin_top = 164.0
margin_right = 1024.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 31 )

[node name="Label" type="Label" parent="VBoxContainer/Control/VBoxContainer/PublicKey"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "Public Key: "

[node name="TextEdit" parent="VBoxContainer/Control/VBoxContainer/PublicKey" instance=ExtResource( 6 )]
margin_left = 154.0
margin_right = 404.0
margin_bottom = 32.0
custom_styles/read_only = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
custom_colors/background_color = Color( 0, 0, 0, 1 )
custom_colors/number_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 1, 1, 0.988235, 1 )
text = "test"
readonly = true

[node name="QuestionButton" parent="VBoxContainer/Control/VBoxContainer/PublicKey" instance=ExtResource( 2 )]
margin_left = 408.0
margin_right = 440.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 1
icon = ExtResource( 9 )

[node name="Answer" type="Label" parent="VBoxContainer/Control/VBoxContainer/PublicKey"]
visible = false
margin_left = 444.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "This unique key identifies your Leaderboard. Its not editable."
autowrap = true

[node name="MasterKey" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer"]
margin_top = 216.0
margin_right = 1024.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 31 )

[node name="Label" type="Label" parent="VBoxContainer/Control/VBoxContainer/MasterKey"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "Master Key: "

[node name="TextEdit" parent="VBoxContainer/Control/VBoxContainer/MasterKey" instance=ExtResource( 6 )]
margin_left = 154.0
margin_right = 504.0
margin_bottom = 32.0
rect_min_size = Vector2( 350, 0 )
custom_styles/read_only = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
custom_colors/background_color = Color( 0, 0, 0, 1 )
custom_colors/number_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 1, 1, 0.988235, 1 )
text = "test"
readonly = true

[node name="QuestionButton" parent="VBoxContainer/Control/VBoxContainer/MasterKey" instance=ExtResource( 2 )]
margin_left = 508.0
margin_right = 540.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 1
icon = ExtResource( 9 )

[node name="Answer" type="Label" parent="VBoxContainer/Control/VBoxContainer/MasterKey"]
visible = false
margin_left = 444.0
margin_right = 1024.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "Its important that you keep this key a secret. Everyone with this key can manage your lederboard as an administraor"
autowrap = true

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer"]
margin_top = 268.0
margin_right = 1024.0
margin_bottom = 303.0
rect_min_size = Vector2( 0, 35 )

[node name="SubmitChangesButton" parent="VBoxContainer/Control/VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_right = 127.0
size_flags_horizontal = 1
text = "Save Changes"
icon = null

[node name="ResetChanges" parent="VBoxContainer/Control/VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_left = 131.0
margin_right = 264.0
size_flags_horizontal = 1
text = "Reset Changes"
icon = null

[node name="RemoveButton" parent="VBoxContainer/Control/VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_left = 268.0
margin_right = 452.0
size_flags_horizontal = 1
text = "Remove from my list"
icon = null

[node name="DeleteButton" parent="VBoxContainer/Control/VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_left = 456.0
margin_right = 622.0
size_flags_horizontal = 1
text = "Delete from server"
icon = null

[node name="GenerateGDScriptButtin" parent="VBoxContainer/Control/VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_left = 626.0
margin_right = 843.0
size_flags_horizontal = 1
text = "Generate GD Script Class"
icon = null

[node name="IconButton" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0231853
anchor_top = 0.908546
anchor_right = 0.16381
anchor_bottom = 0.961879
margin_right = 0.0
margin_bottom = 0.0

[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/Name/QuestionButton" to="." method="_on_QuestionButton_name_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/EncryptionKey/QuestionButton" to="." method="_on_QuestionButton_encryption_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/LowBetter/QuestionButton" to="." method="_on_QuestionButton_LowBetter_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/PublicKey/QuestionButton" to="." method="_on_QuestionButton_public_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/MasterKey/QuestionButton" to="." method="_on_QuestionButton_master_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/Buttons/SubmitChangesButton" to="." method="_on_SubmitChangesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/Buttons/ResetChanges" to="." method="_on_ResetChanges_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/Buttons/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/Buttons/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/Buttons/GenerateGDScriptButtin" to="." method="_on_GenerateGDScriptButtin_pressed"]
